# ai-lab

./: .bandit.yml  .flake8  .gitignore  .pre-commit-config.yaml  0_Simple_NN.py  README.md  assignment1.ipynb  pyproject.toml
