[tool.poetry]
name="AI Lab"
description="Lab of the lecture 'Artificial Intelligence' at my university"
authors = ["Felix Schneider <mail@fschneider.me>"]
version = "0.1"
package-mode = false

[tool.poetry.dependencies]
python = "3.11"
torch = "^2.4.1"
numpy = "^2.1.1"
jupyter = "^1.1.1"
torchvision = "^0.19.1"
black = {extras = ["jupyter"], version = "^24.8.0"}
